--- a/webui/components/settings/users/user-management.html
+++ b/webui/components/settings/users/user-management.html
@@ -51,7 +51,7 @@
       </div>
 
       <!-- Create Modal -->
-      <div class="modal-overlay" x-show="showCreateModal" x-cloak @click.self="closeModals()" style="display: none;" x-transition>
+      <div class="modal-overlay" x-show="showCreateModal" x-cloak @click.self="closeModals()" x-transition>
         <div class="modal-container">
           <div class="modal-header">
             <h3>Créer un utilisateur</h3>
@@ -84,7 +84,7 @@
       </div>
 
       <!-- Edit Modal -->
-      <div class="modal-overlay" x-show="showEditModal" x-cloak @click.self="closeModals()" style="display: none;" x-transition>
+      <div class="modal-overlay" x-show="showEditModal" x-cloak @click.self="closeModals()" x-transition>
         <div class="modal-container">
           <div class="modal-header">
             <h3>Modifier l'utilisateur</h3>
@@ -117,7 +117,7 @@
       </div>
 
       <!-- Delete Modal -->
-      <div class="modal-overlay" x-show="showDeleteModal" x-cloak @click.self="closeModals()" style="display: none;" x-transition>
+      <div class="modal-overlay" x-show="showDeleteModal" x-cloak @click.self="closeModals()" x-transition>
         <div class="modal-container">
           <div class="modal-header">
             <h3>Supprimer l'utilisateur</h3>
